// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapDispatchToProps maps the action generators 1`] = `
Object {
  "payload": Object {
    "url": "my-url",
  },
  "type": "CreateGroupFlow/UPDATE_GROUP_DATA",
}
`;

exports[`mapStateToProps returns the right keys 1`] = `
Object {
  "fetchUrlPending": true,
  "groupData": Object {
    "url": "my-url",
  },
  "urlExists": false,
}
`;

exports[`mergeProps merges the props 1`] = `
Object {
  "CreateGroupFlow": Object {
    "groupData": Object {
      "url": "my-url",
    },
    "urlExists": false,
  },
  "goToNextStep": [Function],
  "navigation": Object {
    "navigate": [MockFunction],
  },
  "pending": Object {
    "CreateGroupFlow/FETCH_URL_EXISTS": true,
  },
}
`;
